--- a/BZASSIGNMENT2/NewFolder/CSSanimation/index.html
+++ b/BZASSIGNMENT2/NewFolder/CSSanimation/index.html
@@ -35,9 +35,9 @@
       <h1>Come Ski with Bri!</h1>
     </div>
     <div class="slide-container">
-      <img src="./images/5courchevel-saulares-peak.jpg" />
-      <img src="./images/10fc19e1e78a836152f6b47d358d8da4.jpg" />
-      <img src="./images/luxury.jpg" />
+      <img src="./Images/5courchevel-saulares-peak.jpg" />
+      <img src="./Images/10fc19e1e78a836152f6b47d358d8da4.jpg" />
+      <img src="./Images/luxury.jpg" />
     </div>
   </body>
 </html>
