--- a/BZASSIGNMENT2/NewFolder/CSSanimation/index.html
+++ b/BZASSIGNMENT2/NewFolder/CSSanimation/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="CSS/styles.css" />
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
     <header>
@@ -35,9 +35,9 @@
       <h1>Come Ski with Bri!</h1>
     </div>
     <div class="slide-container">
-      <img src="./Images/5courchevel-saulares-peak.jpg" />
-      <img src="./Images/10fc19e1e78a836152f6b47d358d8da4.jpg" />
-      <img src="./Images/luxury.jpg" />
+      <img src="./images/5courchevel-saulares-peak.jpg" />
+      <img src="./images/10fc19e1e78a836152f6b47d358d8da4.jpg" />
+      <img src="./images/luxury.jpg" />
     </div>
   </body>
 </html>
