--- a/BZASSIGNMENT3/CSS/index.html
+++ b/BZASSIGNMENT3/CSS/index.html
@@ -59,7 +59,7 @@
               Which of the following is your
               <span style="display: inline-block">favorite restaurant?</span>
             </h1>
-            <h2>We'll taylor your prizes to your choice.</h2>
+            <h2>We'll taylor your free dinner to your choice.</h2>
             <ul>
               <li>
                 <input type="radio" name="favorite-restaurant" id="DinTaiFung" /><label
