--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <ul>
             <li><a href="./BZASSIGNMENT1/">Assignment 1</a></li>
             <li><a href="./BZASSIGNMENT2/">Assignment 2</a></li>
-            <li><a href="./BZASSIGNMENT3/">Assigntment 3</a></li>
+            <li><a href="./BZASSIGNMENT3/index.html">Assigntment 3</a></li>
         </ul>
     </body>
 </html>
